--- a/equipes.html
+++ b/equipes.html
@@ -111,7 +111,7 @@ a.equipe-card {
     <h2>Equipe 911</h2>
   </a>
 
-  <a href="https://www.instagram.com/912.ifal?igsh=bTN0NGd2MTgyNnFh" class="equipe-card" style="border-color: gold;">
+  <a href="https://www.instagram.com/912.ifal?igsh=bTN0NGd2MTgyNnFh" class="equipe-card" style="border-color: rgb(143, 38, 38);">
     <img src="912_iconn.jpg" class="icone-img" alt="Equipe 912">
     <h2>Equipe 912</h2>
   </a>
